dados pre processados

--- a/analise_voos_covid.ipynb
+++ b/analise_voos_covid.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -34,16 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "voos_br = pd.read_csv('dados_estatisticos.csv', encoding='ISO-8859-1', sep='\\t', lineterminator='\\r',usecols=[\"ANO\",\"MÊS\",\"AEROPORTO DE ORIGEM (PAÍS)\",\"AEROPORTO DE DESTINO (PAÍS)\",\"PASSAGEIROS PAGOS\",\"PASSAGEIROS GRÁTIS\"])"
+    "voos_br = pd.read_csv('dados_estatisticos_reduzidos_192021.csv', sep='\\t', lineterminator='\\r')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "13874  2020-03-01   Brazil          2.0           NaN"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,54 +133,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ANO</th>\n",
-       "      <th>MÊS</th>\n",
-       "      <th>AEROPORTO DE ORIGEM (PAÍS)</th>\n",
-       "      <th>AEROPORTO DE DESTINO (PAÍS)</th>\n",
-       "      <th>PASSAGEIROS PAGOS</th>\n",
-       "      <th>PASSAGEIROS GRÁTIS</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [ANO, MÊS, AEROPORTO DE ORIGEM (PAÍS), AEROPORTO DE DESTINO (PAÍS), PASSAGEIROS PAGOS, PASSAGEIROS GRÁTIS]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "voos_br.head()"
    ]
