dados utf-8 e reduzidos

--- a/analise_voos_covid.ipynb
+++ b/analise_voos_covid.ipynb
@@ -34,17 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "voos_br = pd.read_csv('dados_estatisticos_reduzidos_192021.csv', sep='\\t', lineterminator='\\r')\n"
+    "voos_br = pd.read_csv('dados_estatisticos_reduzidos.csv', sep='\\t')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -133,9 +135,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ANO</th>\n",
+       "      <th>MĘS</th>\n",
+       "      <th>AEROPORTO DE ORIGEM (PAÍS)</th>\n",
+       "      <th>AEROPORTO DE DESTINO (PAÍS)</th>\n",
+       "      <th>PASSAGEIROS PAGOS</th>\n",
+       "      <th>PASSAGEIROS GRÁTIS</th>\n",
+       "      <th>ASSENTOS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ESTADOS UNIDOS DA AMÉRICA</td>\n",
+       "      <td>ESTADOS UNIDOS DA AMÉRICA</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>246.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ESTADOS UNIDOS DA AMÉRICA</td>\n",
+       "      <td>BRASIL</td>\n",
+       "      <td>2391.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>2847.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ESTADOS UNIDOS DA AMÉRICA</td>\n",
+       "      <td>BRASIL</td>\n",
+       "      <td>6879.0</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>7380.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ESTADOS UNIDOS DA AMÉRICA</td>\n",
+       "      <td>BRASIL</td>\n",
+       "      <td>5130.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>6132.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ESTADOS UNIDOS DA AMÉRICA</td>\n",
+       "      <td>BRASIL</td>\n",
+       "      <td>219.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>246.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ANO  MĘS AEROPORTO DE ORIGEM (PAÍS) AEROPORTO DE DESTINO (PAÍS)  \\\n",
+       "0  2011    1  ESTADOS UNIDOS DA AMÉRICA   ESTADOS UNIDOS DA AMÉRICA   \n",
+       "1  2011    1  ESTADOS UNIDOS DA AMÉRICA                      BRASIL   \n",
+       "2  2011    1  ESTADOS UNIDOS DA AMÉRICA                      BRASIL   \n",
+       "3  2011    1  ESTADOS UNIDOS DA AMÉRICA                      BRASIL   \n",
+       "4  2011    1  ESTADOS UNIDOS DA AMÉRICA                      BRASIL   \n",
+       "\n",
+       "   PASSAGEIROS PAGOS  PASSAGEIROS GRÁTIS  ASSENTOS  \n",
+       "0                0.0                 0.0     246.0  \n",
+       "1             2391.0                51.0    2847.0  \n",
+       "2             6879.0                95.0    7380.0  \n",
+       "3             5130.0                57.0    6132.0  \n",
+       "4              219.0                 1.0     246.0  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "voos_br.head()"
    ]
