descricao do preprocessamento

--- a/analise_voos_covid.ipynb
+++ b/analise_voos_covid.ipynb
@@ -249,11 +249,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Pre Processamento\n",
+    "\n",
+    "### Encoding e Formatação\n",
+    "\n",
+    "A base de dados proveniente da ANAC veio com encoding latin-3 e virgulas dentro de algumas celulas de texto. Para lidar com a virgula foi necessário abrir o .csv no LibreOffice Calc e marcar que não usasse vírgulas para separar o texto. Para lidar com o encoding foi necessário abrir o .csv no notepadqq (ou notepad++ no windows) e salvar o encoding como UTF-8.\n",
+    "\n",
+    "### Redução de dimensionalidade\n",
+    "\n",
+    "A base tem muitas colunas que não são relevantes para o problema escolhido, por isso foram deletadas e outra versão do arquivo .csv foi criada."
+   ]
   },
   {
    "cell_type": "markdown",
